# Play-stuff

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  BOOTSTRAP_SUMMARY.md  CODE_OF_CONDUCT.md  COMPLETION_REPORT.md  CONTRIBUTING.md  COPILOT_MAX_DELEGATION.md  LICENSE  M4_COMPLETION.md  M4_TO_M5_TRANSITION.md  MAXIMUM_AUTOMATION_SUMMARY.md  MIGRATION.md  Makefile  OBSERVABILITY.md  QUICKSTART.md  README.md  RELEASE_NOTES_DRAFT.md  RELEASE_NOTES_GITHUB.md  SECURITY.md  SESSION_SUMMARY.md  SPRINT_COMPLETION_REPORT.md  UNIFICATION_PLAN.md  config.example.yaml  config.max-automation.yaml  config.post-only.yaml  config.safe-first-run.yaml  config.safe.yaml  coverage.xml  mcp.json  mypy.ini  noxfile.py  pyproject.toml  pytest.ini  requirements.txt  setup-max-automation.ps1  setup.bat  setup.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  labels.yml  pull_request_template.md  release-drafter.yml
_archive/: README.md
curated/: accounts.txt  tweet_ids.txt
docs/: ASSISTANCE_CHECKLIST.md  AUTH_REQUIREMENTS.md  ENVIRONMENTS.md  EXTENSIONS_AUDIT.md  FREE_MODE.md  LOCAL_SETUP.md  M4_COMPLETION.md  MCP.md  OPPORTUNITIES.md  PRODUCTION_READINESS.md  README.md  REPO_CLEANUP_PROPOSAL.md  RISK_REGISTER.md  SPRINTS.md  TROUBLESHOOTING_403.md  X_AGENT_DEEP_DIVE.md  telemetry.md
legacy/: README.md  config.safe.yaml  config.yaml.maximum-backup
notebooks/: Repo_Inspection_and_DryRun.ipynb  Sprint_2_Plan.ipynb
scripts/: check_ascii.py  check_notebook_outputs.py  check_notebooks_no_outputs.py  gh_env_setup.ps1  gh_env_setup.sh  mypy.ps1  mypy.sh  peek_actions.py  scrub_docs_ascii.py  update_milestone_status.py  verify_telemetry_dry_run.py
src/: actions.py  auth.py  budget.py  config_schema.py  learn.py  logger.py  logging_setup.py  main.py  rate_limiter.py  reliability.py  scheduler.py  storage.py  (+2 more)
(+148 files in other folders)
